Update test and Readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytz = "2023.3.post1"
 rdata = "0.10.0"
 seaborn = "0.13.0"
 six = "1.16.0"
+sklearn = ""
 tzdata = "2023.3"
 xarray = "2023.12.0"
 zipp = "3.17.0"
