--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,31 +5,56 @@ description = "Ethnobiological data assessment tool."
 authors = ["Ogün Demir <ogundemir8@gmail.com>"]
 license = "MIT"
 readme = "README.md"
+classifiers=[
+        'Development Status :: 5 - Production/Stable',
+        'Intended Audience :: Developers',
+        'License :: OSI Approved :: MIT License',
+        'Operating System :: OS Independent',
+        'Programming Language :: Python :: 3',
+        'Topic :: Software Development :: Libraries :: Python Modules'
+    ]
+
+packages = [
+    { include = "pyethnobiology" },
+]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.10"
 biopython = "1.81"
 contourpy = "1.2.0"
 cycler = "0.12.1"
 fonttools = "4.47.0"
 importlib-resources = "6.1.1"
+joblib = "1.3.2"
 kiwisolver = "1.4.5"
 matplotlib = "3.8.2"
 numpy = "1.26.2"
+openpyxl = "3.1.2"
 packaging = "23.2"
 pandas = "2.1.4"
-pillow = "10.1.0"
-pycirclize = "1.1.0"
+Pillow = "10.1.0"
+pyCirclize = "1.1.0"
 pyparsing = "3.1.1"
 python-dateutil = "2.8.2"
 pytz = "2023.3.post1"
 rdata = "0.10.0"
+scikit-learn = "1.3.2"
+scipy = "1.11.4"
 seaborn = "0.13.0"
 six = "1.16.0"
-sklearn = ""
+threadpoolctl = "3.2.0"
 tzdata = "2023.3"
 xarray = "2023.12.0"
 zipp = "3.17.0"
+
+
+
+
+[tool.poetry.urls]
+homepage = "https://github.com/demirogun/pyethnobiology"
+repository = "https://pypi.org/project/pyethnobiology/"
+documentation = "https://github.com/demirogun/pyethnobiology/blob/main/README.md"
+issues = "https://github.com/demirogun/pyethnobiology/issues"
 
 
 [build-system]
