--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,15 +47,12 @@ tzdata = "2023.3"
 xarray = "2023.12.0"
 zipp = "3.17.0"
 
-
-
-
 [tool.poetry.urls]
 homepage = "https://github.com/demirogun/pyethnobiology"
 repository = "https://pypi.org/project/pyethnobiology/"
 documentation = "https://github.com/demirogun/pyethnobiology/blob/main/README.md"
 issues = "https://github.com/demirogun/pyethnobiology/issues"
-
+github = "https://github.com/demirogun/pyethnobiology"
 
 [build-system]
 requires = ["poetry-core"]
